<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
    android:layout_marginTop="15dp"
        android:paddingBottom="5dp"
        android:paddingLeft="12dp"
    android:id="@+id/no_arete"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/arete"
    android:textColor="#ff3b3dff"
    android:textStyle="bold"/>

    <TextView
        android:layout_marginTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="12dp"
        android:id="@+id/f_nacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nacio"
        android:textColor="#ff3b3dff"
        android:textStyle="bold"/>

    <TextView
        android:layout_marginTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="12dp"
        android:id="@+id/nombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomb"
        android:textColor="#ff3b3dff"
        android:textStyle="bold"/>

    <TextView
        android:layout_marginTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="12dp"
        android:id="@+id/sexo1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sex"
        android:textColor="#ff3b3dff"
        android:textStyle="bold"
        android:visibility="invisible"/>
    <TextView
        android:layout_marginTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="12dp"
        android:id="@+id/fe_ges"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/gesta"
        android:textColor="#ff3b3dff"
        android:textStyle="bold"
        android:visibility="invisible"/>
    <TextView
        android:layout_marginTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="12dp"
        android:id="@+id/fe_par"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/pario"
        android:textColor="#ff3b3dff"
        android:textStyle="bold"
        android:visibility="invisible"/>

</LinearLayout>